Added remote update and fixed minor issues

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,7 +17,7 @@
 
 </div>
 <script>
-    var quill = new Quill('#editor', {
+    window.quill = new Quill('#editor', {
         theme: 'snow',
         modules: {
             'OtExtender': {}
