--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdn.quilljs.com/1.2.6/quill.snow.css">
-    <script src="https://cdn.quilljs.com/1.3.3/quill.js"></script>
+    <link href="//cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
+    <script src="//cdn.quilljs.com/1.3.4/quill.js"></script>
     <script src="OtExtender.bundle.js"></script>
 
     <title>Quill - Test</title>
