--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -6,23 +6,47 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="//cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
-    <script src="//cdn.quilljs.com/1.3.4/quill.js"></script>
-    <script src="OtExtender.bundle.js"></script>
-
+    <link href="css/otExtender.css" rel="stylesheet">
+    <script src="//cdn.quilljs.com/1.3.4/quill.js">
+    </script><script src="OtExtender.bundle.js"></script>
     <title>Quill - Test</title>
 </head>
 <body>
 <h1>Quill Editor</h1>
+
+<div id="toolbar">
+    <select class="ql-size">
+        <option value="small"></option>
+        <!-- Note a missing, thus falsy value, is used to reset to default -->
+        <option selected></option>
+        <option value="large"></option>
+        <option value="huge"></option>
+    </select>
+    <button class="ql-bold"></button>
+    <button class="ql-italic"></button>
+    <button class="ql-underline"></button>
+    <button class="ql-list" value="ordered"></button>
+    <button class="ql-list" value="bullet"></button>
+    <button class="ql-encryption"></button>
+
+</div>
 <div id="editor">
 
 </div>
+
 <script>
+    var toolbarOptions = [['bold', 'italic', 'underline', 'strike']];
     window.quill = new Quill('#editor', {
         theme: 'snow',
         modules: {
+            toolbar: {
+                container: "#toolbar"
+            },
             'OtExtender': {}
         }
     });
+
+
 </script>
 </body>
 </html>
