Added status bar which shows if the document is encrypted or not

--- a/src/client/views/css/otExtender.css
+++ b/src/client/views/css/otExtender.css
@@ -1,3 +1,10 @@
 .ql-encryption:before {
     content: "E";
 }
+
+#statusBar {
+    border: solid #ccc;
+    border-width: 0px 1px 1px 1px;
+    padding: 5px 15px;
+    font-size: 100%;
+}
