Added dialog for adding new user Added dummy dialog for adding new user to the current document, function will be implemented with the keyserver functionality

--- a/src/client/views/css/otExtender.css
+++ b/src/client/views/css/otExtender.css
@@ -2,6 +2,10 @@
     content: "E";
 }
 
+.ql-encAddUser:before{
+    content: "+";
+}
+
 #statusBar {
     border: solid #ccc;
     border-width: 0px 1px 1px 1px;
