--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,17 +17,18 @@
 <div id="toolbar">
     <select class="ql-size">
         <option value="small"></option>
-        <!-- Note a missing, thus falsy value, is used to reset to default -->
         <option selected></option>
         <option value="large"></option>
         <option value="huge"></option>
     </select>
+    <button class="ql-link"></button>
     <button class="ql-bold"></button>
     <button class="ql-italic"></button>
     <button class="ql-underline"></button>
     <button class="ql-list" value="ordered"></button>
     <button class="ql-list" value="bullet"></button>
     <button class="ql-encryption"></button>
+    <button class="ql-encAddUser"></button>
 
 </div>
 <div id="editor"></div>
@@ -45,8 +46,6 @@
             }
         }
     });
-
-
 </script>
 </body>
 </html>
