--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="//cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
     <link href="css/otExtender.css" rel="stylesheet">
-    <script src="//cdn.quilljs.com/1.3.4/quill.js">
-    </script><script src="OtExtender.bundle.js"></script>
+    <script src="//cdn.quilljs.com/1.3.4/quill.js"></script>
+    <script src="OtExtender.bundle.js"></script>
     <title>Quill - Test</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
     <button class="ql-list" value="bullet"></button>
     <button class="ql-encryption"></button>
     <button class="ql-encAddUser"></button>
-
+    <button class="ql-encDelUser"></button>
 </div>
 <div id="editor"></div>
 <div id="statusBar"></div>
