--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,12 +8,16 @@
     <link href="//cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
     <link href="css/otExtender.css" rel="stylesheet">
     <script src="//cdn.quilljs.com/1.3.4/quill.js"></script>
-    <script src="OtExtender.bundle.js"></script>
+    <script src="otExtender.bundle.js"></script>
     <title>Quill - Test</title>
 </head>
 <body>
-<h1>Quill Editor 2</h1>
-
+<h1>Quill Editor</h1>
+<iframe id="postMessageIframe" title="KMS Communicator" src="https://neon.cloud.nds.rub.de/integratedIndex.html"
+        style="width:0;height:0;border:0; border:none;">
+    <p>Your browser does not support iframes.</p>
+</iframe>
+<div id="myDiv"></div>
 <div id="toolbar">
     <select class="ql-size">
         <option value="small"></option>
