Added staticKey option for demonstration purpose Fixed a webpack bug that lead to not packing the bundle

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -46,7 +46,8 @@
                 container: "#toolbar"
             },
             'OtExtender': {
-                statusBar: "#statusBar"
+                statusBar: "#statusBar",
+                useStaticKeys: false
             }
         }
     });
