--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -29,11 +29,16 @@
     <button class="ql-bold"></button>
     <button class="ql-italic"></button>
     <button class="ql-underline"></button>
-    <button class="ql-list" value="ordered"></button>
-    <button class="ql-list" value="bullet"></button>
     <button class="ql-encryption"></button>
     <button class="ql-encAddUser"></button>
     <button class="ql-encDelUser"></button>
+    <select class="ql-color">
+        <option value="red">Red</option>
+        <option value="#00f">Blue</option>
+        <option value="rgb(255,255,0)">Yellow</option>
+        <option value="green">Green</option>
+        <option value="black">Black</option>
+    </select>
 </div>
 <div id="editor"></div>
 <div id="statusBar"></div>
