--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="//cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
+    <link href="css/quill.snow.css" rel="stylesheet">
     <link href="css/otExtender.css" rel="stylesheet">
-    <script src="//cdn.quilljs.com/1.3.4/quill.js"></script>
+    <script src="js/quill.js"></script>
     <script src="otExtender.bundle.js"></script>
     <title>Quill - Test</title>
 </head>
