Replaced 'E', '+', and '-' by icons

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="css/fa/css/all.min.css" rel="stylesheet">
     <link href="css/quill.snow.css" rel="stylesheet">
     <link href="css/otExtender.css" rel="stylesheet">
     <script src="js/quill.js"></script>
@@ -29,9 +30,9 @@
     <button class="ql-bold"></button>
     <button class="ql-italic"></button>
     <button class="ql-underline"></button>
-    <button class="ql-encryption"></button>
-    <button class="ql-encAddUser"></button>
-    <button class="ql-encDelUser"></button>
+    <button class="ql-encryption fas fa-lock"></button>
+    <button class="ql-encAddUser fas fa-user-plus"></button>
+    <button class="ql-encDelUser fas fa-user-minus"></button>
     <select class="ql-color">
         <option value="red">Red</option>
         <option value="#00f">Blue</option>
