Design update, serving logos locally

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -58,6 +58,12 @@
         }
     });
 </script>
-<div class="footer"><a href="http://bmbf.de"><img src="http://www.syncenc.de/wp-content/uploads/2016/11/BMBF_RGB_Gef_M.jpg" alt="BMBF"></a><a href="http://www.uni-saarland.de/lehrstuhl/borges"><img src="http://www.syncenc.de/wp-content/uploads/2016/11/UdS-Logo-300x131-1-e1479212699744.png" alt="SAAR"></a><a href="https://www.nds.rub.de"><img src="http://www.syncenc.de/wp-content/uploads/2016/11/ruhr-universitat-bochum-LOGO-300x150-1-e1479212712209.jpg" alt="RUB"></a><a href="https://www.ecsec.de"><img src="http://www.syncenc.de/wp-content/uploads/2016/09/ecsec-logo_100px.png" style="width:120px;" alt="ECSEC"></a></div>
+<div class="footer">
+    <hr/>
+    <a href="http://bmbf.de"><img src="img/bmbf-logo.jpg" alt="BMBF"></a>
+    <a href="http://www.uni-saarland.de/lehrstuhl/borges"><img src="img/uds-logo.png" alt="UdS"></a>
+    <a href="https://www.nds.rub.de"><img src="img/rub-logo.jpg" alt="RUB"></a>
+    <a href="https://www.ecsec.de"><img src="img/ecsec-logo.png" style="width:120px;" alt="ECSEC"></a>
+</div>
 </body>
 </html>
