--- a/src/client/views/css/otExtender.css
+++ b/src/client/views/css/otExtender.css
@@ -14,6 +14,17 @@
     font-size: 100%;
 }
 
+h2 {
+    margin-bottom: auto;
+}
+
+.footer {
+    margin-top: 3em;
+}
+
 .footer img {
     margin: 7px 15px;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
 }
