Added logout button (no functionality yet)

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -40,6 +40,7 @@
     <button class="ql-encryption fas fa-lock"></button>
     <button class="ql-encAddUser fas fa-user-plus"></button>
     <button class="ql-encDelUser fas fa-user-minus"></button>
+    <button class="ql-logout fas fa-sign-out-alt"></button>
 </div>
 <div id="editor"></div>
 <div id="statusBar"></div>
