Add an easy way to reset the document by clicking on the BMBF logo

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -62,7 +62,7 @@
 </script>
 <div class="footer">
     <hr/>
-    <a href="http://bmbf.de"><img src="img/bmbf-logo.jpg" alt="BMBF"></a>
+    <a href="javascript:window.doc.del(); location.reload();"><img src="img/bmbf-logo.jpg" alt="BMBF"></a>
     <a href="http://www.uni-saarland.de/lehrstuhl/borges"><img src="img/uds-logo.png" alt="UdS"></a>
     <a href="https://www.nds.rub.de"><img src="img/rub-logo.jpg" alt="RUB"></a>
     <a href="https://www.ecsec.de"><img src="img/ecsec-logo.png" style="width:120px;" alt="ECSEC"></a>
